# GodotPP

./: CMakeLists.txt
game/: project.godot
game/addons/qns/: qns.gdextension.uid
game/scenes/: game.gd  game.tscn  network_system.tscn
src/: CMakeLists.txt
src/godotpp/: CMakeLists.txt
src/godotpp/include/: player.hpp  qns_player.hpp
src/godotpp/src/: player.cpp  qns_player.cpp  register_types.cpp
src/qns/: CMakeLists.txt  README.md  qns.gdextension.in
src/qns/include/: linking_context.hpp  network_hash.hpp  qns_godot_utils.hpp  qns_macros.hpp  qns_networked_node.hpp  qns_replication_builder.hpp  qns_serializer.hpp  qns_session.hpp  qns_session_manager.hpp  quic_network_system.hpp  register_types.h
src/qns/rust_backend/: Cargo.toml
src/qns/rust_backend/src/: ffi.rs  lib.rs
src/qns/rust_backend/src/protocols/: mod.rs  quic_protocol.rs
src/qns/src/: quic_network_system.cpp  register_types.cpp
src/server/: CMakeLists.txt
src/server/src/: main.cpp
